[B]Version 5.0.09 (Mar 18, 2018)[/B]
- Code Base Changes:
    - None
- Resolvers Added:
    - None
- Resolvers Fixed/Updated:
    - realdebrid
    - streamango
    - thevideo
    - vidlox
- Resolvers Removed
    - None
- Languages Added/Updated
	- None

[B]Version 5.0.08a (Mar 14, 2018)[/B]
- Code Base Changes:
    - None
- Resolvers Added:
    - None
- Resolvers Fixed/Updated:
    - realdebrid
- Resolvers Removed
    - None
- Languages Added/Updated
	- None

[B]Version 5.0.08 (Mar 10, 2018)[/B]
- Code Base Changes:
    - Fix for testing streams with SSL errors
    - Fixes for iOS
    - Include jsunfuck
    - Fix for SSL Context
    - Fixes for Python > 2.7.12
    - Fixes for Xbox One
    - Support for GDrive (see dmdsoftware.net)
- Resolvers Added:
    - ssfiles
    - vidnode
    - filebebo
    - yandex
    - streamgo
- Resolvers Fixed/Updated:
    - streamango
    - flixtor
    - vshare
    - mycloud
    - premiumize
    - openload
    - flashx
    - tunepk
    - streamplay
    - speedvid
    - thevid
    - thevideo
    - userscloud
    - vidlox
    - rapidvideocom
    - alldebrid
    - uptobox
    - vidzella
    - googlevideo
    - powvideo
    - vidtodo
    - xvidstage
- Resolvers Removed
    - ol_gmu
    - divxstage
    - cloudtime
    - nosvideo
    - stagevu
- Languages Added/Updated
    - Greek
    - Italian
    - Norwegian translation
    - Croatian strings
    - Spanish summary

* Testers Needed: https://www.tvaddons.co/urlresolver-testing-kodi/
* Developers Needed: https://www.tvaddons.co/urlresolver-kodi-addon/